Archive2/f2/05d538a87497f5/output
main.cpp: In function 'int main()':
main.cpp:18:27: error: types may not be defined in 'sizeof' expressions
     cout << sizeof(struct { int64_t a; int32_t b; int8_t c; ) << endl;
                           ^
main.cpp:18:61: error: expected unqualified-id before ')' token
     cout << sizeof(struct { int64_t a; int32_t b; int8_t c; ) << endl;
                                                             ^
main.cpp:19:5: error: 'cout' does not name a type
     cout << sizeof(B) << endl;
     ^
main.cpp:20:1: error: expected ';' after struct definition
 }
 ^
main.cpp:20:1: error: expected ')' before ';' token
main.cpp:20:1: error: expected '}' at end of input
